# ravine_display

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  links.md  test.ini  test2.ini  test_mseq.ini
src/: checkerboard.cpp  event_test.cpp  grating.cpp  main.cpp  plot.cpp  utility_classes.hpp  viewport.hpp
src/04/: color.hpp  ex02.fs  ex02.vs
src/05/: data.hpp  fragment.glsl  main_05.cpp  vertex.glsl
src/checkerboard/: fragment-1.4.glsl  fragment.glsl  vertex-1.4.glsl  vertex.glsl
src/grating/: fragment-1.4.glsl  fragment.glsl  vertex-1.4.glsl  vertex.glsl
src/plot/: fragment.glsl  vertex.glsl
src/utilities/: bmp.cpp  initialize.cpp  msequence.cpp  parse_ini.cpp  parse_ini.hpp  program.cpp  program.hpp  run.cpp  run.hpp  run_spec.cpp  utility_classes.cpp  utility_classes.hpp
test/: test.ini  test3.ini  test_event_client.cpp  test_mseq.ini
util/: axes.hpp  bmp.hpp  event_client.cpp  event_client.hpp  initialize.cpp  initialize.hpp  msequence.cpp  msequence.hpp  parse_ini.cpp  parse_ini.hpp  run.cpp  run.hpp  run_spec.cpp  run_spec.hpp  tcp_client.cpp  tcp_client.hpp  utility_classes.cpp  utility_classes.hpp
